--- a/只要平凡.md
+++ b/只要平凡.md
@@ -1,20 +1,20 @@
 # 只要平凡
 
-也许很远或是昨天，在这里或是对岸；
-长路辗转离合悲欢，人聚又人散。
-放过对错才知答案，活着的勇敢；
-没有神的光环，你我生而平凡。
+也许很远或是昨天，在这里或是对岸；<br>
+长路辗转离合悲欢，人聚又人散。<br>
+放过对错才知答案，活着的勇敢；<br>
+没有神的光环，你我生而平凡。<br>
 
-在心碎中认清遗憾，生命漫长也短暂；
-跳动心脏长出藤蔓，愿为险而战。
-跌入灰暗坠入深渊，沾满泥土的脸；
-没有神的光环，握紧手中的平凡。
+在心碎中认清遗憾，生命漫长也短暂；<br>
+跳动心脏长出藤蔓，愿为险而战。<br>
+跌入灰暗坠入深渊，沾满泥土的脸；<br>
+没有神的光环，握紧手中的平凡。<br>
 
-此心此生无憾，生命的火已点燃。
+此心此生无憾，生命的火已点燃。<br>
 
-有一天也许会走远，也许还能再相见；
-无论在人群在天边，让我再看清你的脸。
-任泪水铺满了双眼，虽无言泪满面；
-不要神的光环，只要你的平凡。
+有一天也许会走远，也许还能再相见；<br>
+无论在人群在天边，让我再看清你的脸。<br>
+任泪水铺满了双眼，虽无言泪满面；<br>
+不要神的光环，只要你的平凡。<br>
 
 2021-07-09
