追光者-中文普通话版

--- a/追光者.md
+++ b/追光者.md
@@ -7,4 +7,33 @@
 某一刻，你的光照亮了我。<br>
 
 如果说，<br>
-你是遥远的星河，
+你是遥远的星河，耀眼得让人想哭；<br>
+我是追逐着你的眼眸，<br>
+总在孤单时候眺望夜空。<br>
+
+我可以跟在你身后，像影子追着光梦游；<br>
+我可以等在这路口，不管你会不会经过。<br>
+每当我为你抬起头，连眼泪都觉得自由；<br>
+有的爱像阳光倾落，边拥有边失去着。<br>
+
+如果说，<br>
+你是夏夜的萤火，孩子们为你唱歌；<br>
+那么我，是想要画你的手。<br>
+
+你看我，<br>
+多么渺小一个我，因为你有梦可做；<br>
+也许你不会为我停留，<br>
+那就让我站在你的背后。<br>
+
+我可以跟在你身后，像影子追着光梦游；<br>
+我可以等在这路口，不管你会不会经过。<br>
+每当我为你抬起头，连眼泪都觉得自由；<br>
+有的爱像大雨滂沱，却依然相信彩虹。<br>
+
+我可以跟在你身后，像影子追着光梦游；<br>
+我可以等在这路口，不管你会不会经过。<br>
+每当我为你抬起头，连眼泪都觉得自由；<br>
+有的爱像大雨滂沱，却依然相信彩虹。<br>
+
+## 中文粤语版一
+
