--- a/追光者.md
+++ b/追光者.md
@@ -35,5 +35,37 @@
 每当我为你抬起头，连眼泪都觉得自由；<br>
 有的爱像大雨滂沱，却依然相信彩虹。<br>
 
-## 中文粤语版一
+## 中文粤语版1一
+
+-- 阿细
+
+你永远在远处发着光，但我却怎么也抓不到；<br>即使前路一片漆黑，但是，我愿意！<br>
+
+你似光，<br>注定燃亮我心火，尽管重复地划破；<br>告别我，唯独亦不熄感觉。<br>
+
+像最初，<br>我是无惧那一个，漆黑里敢于自我；<br>直到光交错于身擦过，<br>没法一起是我想得太多。<br>
+
+原来幸福装载对岸，一闪过不要太惊慌；<br>为何未写过便要放，可给我终确定答案。<br>原来自卑淹没过我，不敢去拥抱那束光；<br>情愿没改变像困我，若有错，可否改过？<br>
+
+你似光，<br>注定燃亮我心火，尽管重复地划破；<br>告别我，唯独亦不熄感觉。<br>
+
+像最初，<br>我是无惧那一个，漆黑里敢于自我；<br>直到光交错于身擦过，<br>没法一起是我想得太多。<br>
+
+原来幸福装载对岸，一闪过不要太惊慌；<br>为何未写过便要放，可给我终确定答案。<br>原来自卑淹没过我，不敢去拥抱那束光；<br>情愿没改变像困我，若有错，可否改过？<br>
+
+原来幸福装载对岸，一闪过不要太惊慌；<br>为何未写过便要放，可给我终确定答案。<br>原来自卑淹没过我，不敢去拥抱那束光；<br>情愿没改变像困我，若有错，可否改过？<br>
+
+## 中文粤语版2一
+
+-- 郑子威
+
+没有光，<br>我没能力去生火，你便无从目睹我；<br>看着你，从前面匆匆闪过。<br>
+
+若有光，<br>擦亮途上那星火，爱就从此刻绽放；<br>就算火熄了彼此错过，但我确信明日开花结果。<br>
+
+为何上天选择了我，恋一次需要去闯祸；<br>为何大家也未发觉，这一秒可以做寄托。<br>长夜月光太像你我，等不到触碰那一幕；<br>其实月光也没有错，为了爱，追光的我。<br>
+
+若我讲，<br>你别遗下我一个，你若从头认识我，<br>对着坐，能投入新的感觉。<br>
+
+若你讲，<br>爱是无办法追溯，过路人始终路过；<br>但你多么似光束散播，<br>在这迷茫人浪怎么去躲。
 
