--- a/追光者.md
+++ b/追光者.md
@@ -35,7 +35,7 @@
 每当我为你抬起头，连眼泪都觉得自由；<br>
 有的爱像大雨滂沱，却依然相信彩虹。<br>
 
-## 中文粤语版1一
+## 中文粤语版1
 
 -- 阿细
 
@@ -55,7 +55,7 @@
 
 原来幸福装载对岸，一闪过不要太惊慌；<br>为何未写过便要放，可给我终确定答案。<br>原来自卑淹没过我，不敢去拥抱那束光；<br>情愿没改变像困我，若有错，可否改过？<br>
 
-## 中文粤语版2一
+## 中文粤语版2
 
 -- 郑子威
 
@@ -67,5 +67,11 @@
 
 若我讲，<br>你别遗下我一个，你若从头认识我，<br>对着坐，能投入新的感觉。<br>
 
-若你讲，<br>爱是无办法追溯，过路人始终路过；<br>但你多么似光束散播，<br>在这迷茫人浪怎么去躲。
+若你讲，<br>爱是无办法追溯，过路人始终路过；<br>但你多么似光束散播，<br>在这迷茫人浪怎么去躲。<br>
+
+为何上天选择了我，恋一次需要去闯祸；<br>为何大家也未发觉，这一秒可以做寄托。<br>长夜月光太像你我，等不到触碰那一幕；<br>其实月光也没有错，为了爱，追光的我。<br>
+
+为何上天选择了我，天光也只有我失落；<br>为何自己也未发觉，天黑了可以又振作。<br>难忘月光照射贝壳，多不快都会变快乐；<br>期望月光也没寄托，为了爱，追光的我。<br>
+
+## 英文版
 
