--- a/追光者.md
+++ b/追光者.md
@@ -73,5 +73,24 @@
 
 为何上天选择了我，天光也只有我失落；<br>为何自己也未发觉，天黑了可以又振作。<br>难忘月光照射贝壳，多不快都会变快乐；<br>期望月光也没寄托，为了爱，追光的我。<br>
 
-## 英文版
+## 英文版 Person who is Chasing the Light
 
+If you say, you're the firework at the bay,<br>I wish I could be a wave,<br>After the rain, you light up the gray.<br>
+
+Far away, you're the galaxy from space,<br>With the stars you kiss my face,<br>I'll go everywhere after your trace,<br>When I'm lonely I will learn to embrace...<br>
+
+I'll follow you along the way,<br>Like shadow chasing down the flame;<br>I'll wait for you right on your way,<br>Come and stay with me if you may.<br>
+
+I'll raise my head and look your way,<br>Tears dropping down and feeling free;<br>Some love comes by like sunlight falling,<br>As if I play your losing game.<br>
+
+If you're like firefly in summer haze,<br>Children laugh around your grace,<br>Then I'll be there, trying to say out your name.<br>
+
+Look at me, what a tiny helpless me,<br>Only dream when you smile at me,<br>Maybe you wouldn't stop just for me,<br>Far behind let me stand there singing.<br>
+
+I'll follow you along the way,<br>Like shadow chasing down the flame;<br>I'll wait for you right on your way,<br>Come and stay with me if you may.<br>
+
+I'll raise my head and look your way,<br>Tears dropping down and feeling free;<br>Some love comes by like hurricane,<br>But rainbows rise...<br>
+
+I'll follow you along the way,<br>Like shadow chasing down the flame;<br>I'll wait for you right on your way,<br>Come and stay with me if you may.<br>
+
+I'll raise my head and look your way,<br>Tears dropping down and feeling free;<br>Some love comes by like hurricane,<br>But rainbows rise after the pain.<br>
