--- a/追光者.md
+++ b/追光者.md
@@ -1,4 +1,4 @@
-# 追光者
+# 追光者 Light Chaser
 
 ## 中文普通话版
 
@@ -73,7 +73,7 @@
 
 为何上天选择了我，天光也只有我失落；<br>为何自己也未发觉，天黑了可以又振作。<br>难忘月光照射贝壳，多不快都会变快乐；<br>期望月光也没寄托，为了爱，追光的我。<br>
 
-## 英文版 Person who is Chasing the Light
+## 英文版 Light Chaser
 
 If you say, you're the firework at the bay,<br>I wish I could be a wave,<br>After the rain, you light up the gray.<br>
 
