--- a/念旧.md
+++ b/念旧.md
@@ -11,65 +11,52 @@
 和声：胜屿
 制作人：胜屿<br>
 
-这世界上的对错<br>
-最后都有个如果<br>
+这世界上的对错最后都有个如果<br>
 还有什么美丽值得铭刻<br>
 曾听过太多飞蛾扑火<br>
-
 被人赞美成了传说<br>
 谁不是流泪的旁观者<br>
+
 看着你的背影慢慢淡了如约的远走<br>
 空下了风景最美的残缺<br>
 骗自己相思不是绝别<br>
 就像三月离了春雪<br>
 等到黄秋过了重逢几何<br>
 
-我站在山的尽头<br>
-看着云朵飞走<br>
+我站在山的尽头，看着云朵飞走<br>
 你像昨夜的海市蜃楼<br>
-给我漫天蝶游<br>
-赴约万水千丘<br>
+给我漫天蝶游，赴约万水千丘<br>
 回忆太美所以人才念旧<br>
 
-我守在梦的出口<br>
-任凭人来人走<br>
+我守在梦的出口，任凭人来人走<br>
 落花触碰像你的温柔<br>
-花瓣慢慢腐朽<br>
-化作情歌几首<br>
+花瓣慢慢腐朽，化作情歌几首<br>
 物是人非里默默消愁<br>
-看着你的背影慢慢淡了如约的远走<br>
 
+看着你的背影慢慢淡了如约的远走<br>
 空下了风景最美的残缺<br>
 骗自己相思不是绝别<br>
 就像三月离了春雪<br>
 等到黄秋过了重逢几何<br>
 
-我站在山的尽头<br>
-看着云朵飞走<br>
+我站在山的尽头，看着云朵飞走<br>
 你像昨夜的海市蜃楼<br>
-给我漫天蝶游<br>
-赴约万水千丘<br>
+给我漫天蝶游，赴约万水千丘<br>
 回忆太美所以人才念旧<br>
 
-我守在梦的出口<br>
-任凭人来人走<br>
+我守在梦的出口，任凭人来人走<br>
 落花触碰像你的温柔<br>
-花瓣慢慢腐朽<br>
-化作情歌几首<br>
+花瓣慢慢腐朽，化作情歌几首<br>
 物是人非里默默消愁<br>
 
-我站在山的尽头<br>
-看着云朵飞走<br>
+我站在山的尽头，看着云朵飞走<br>
 你像昨夜的海市蜃楼<br>
-给我漫天蝶游<br>
-赴约万水千丘<br>
+给我漫天蝶游，赴约万水千丘<br>
 回忆太美所以人才念旧<br>
 
-我守在梦的出口<br>
-任凭人来人走<br>
+我守在梦的出口，任凭人来人走<br>
 落花触碰像你的温柔<br>
-花瓣慢慢腐朽<br>
-化作情歌几首<br>
-
+花瓣慢慢腐朽，化作情歌几首<br>
 物是人非里默默消愁<br>
+
 物是人非里默默消愁
